# FYP_ws

./: README.md
src/: README.md  detect_test.py  detect_test1.py
src/RoTools-v2/: .gitignore  CMakeLists.txt  package.xml
src/RoTools-v2/src/lib/: robot_interface.cpp
src/RoTools-v2/srv/: BuildCartPath.srv  ExecuteAllJointPoses.srv  nachiFollowJointTrajectory.srv
src/ikfast folder/left_arm_left_arm_ikfast_plugin/: CMakeLists.txt  left_arm_left_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/ikfast folder/left_arm_left_arm_ikfast_plugin/src/: left_arm_left_arm_ikfast_moveit_plugin.cpp  left_arm_left_arm_ikfast_solver.cpp
src/ikfast folder/right_arm_right_arm_ikfast_plugin/: CMakeLists.txt  package.xml  right_arm_right_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
src/ikfast folder/right_arm_right_arm_ikfast_plugin/src/: right_arm_right_arm_ikfast_moveit_plugin.cpp  right_arm_right_arm_ikfast_solver.cpp
src/nachi_ros/: README.md
src/nachi_ros/dual_arm_api/: CMakeLists.txt  dual_arm_api  dual_arm_api.cpp  package.xml
src/nachi_ros/dual_arm_api/include/: RobotNode.h
src/nachi_ros/dual_arm_api/lib/: RobotNode.cpp
src/nachi_ros/dual_arm_api/srv/: MoveAndCapture.srv  MoveJointGroup.srv
src/nachi_ros/dual_arm_bringup/: CMakeLists.txt  package.xml
src/nachi_ros/dual_arm_bringup/config/: curiosity_stack.yaml  curiosity_stack_no_torso.yaml
src/nachi_ros/dual_arm_bringup/launch/: arm_gripper_moveit.launch  arm_gripper_roport.launch  arm_moveit.launch  arm_roport.launch  arm_task.launch  camera_link_broadcaster.launch  camera_startup.launch  dual_arm_camera_link_broadcaster.launch  dual_arm_moveit.launch  dual_arm_roport.launch  dual_arm_task.launch  dual_arm_webots.launch  gripper_srv.launch  left_arm_moveit.launch  left_arm_roport.launch  right_arm_moveit.launch  right_arm_roport.launch  test.launch
src/nachi_ros/dual_arm_bringup/scripts/: dual_arm_grasp_test.py  left_arm_waste_grasp.py  test.py  tf_test.py
src/nachi_ros/dual_arm_bringup/tree/: arm_demo.xml  arm_demo1.xml  dual_arm_demo.xml  graspnet.xml  real_dual_arm_demo.xml  waste_grasp.xml  webots_dual_grasp.xml
src/nachi_ros/dual_arm_moveit_config/: .setup_assistant  package.xml
src/nachi_ros/dual_arm_moveit_config/config/: dual_arm.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  (+1 more)
src/nachi_ros/left_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/nachi_ros/mz04_arm_ikfast_arm_plugin/: CMakeLists.txt  mz04_arm_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/nachi_ros/mz04_description/: CMakeLists.txt  package.xml
src/nachi_ros/right_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+111 files in other folders)
